# xbook

./: .gitignore  .pre-commit-config.yaml  README.md  config.json  config.json.example  pyproject.toml  requirements.txt  xbook.py
src/: auth.py  booking.py  time_slot_manip.py  xbook.py
